--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
 
      	
   </properties>
+<distributionManagement>
+     <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <url>http://localhost:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+        <id>nexus-releases</id>
+        <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+</distributionManagement>
 	
   <dependencies>
     <dependency>
