--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.mt</groupId>
   <artifactId>maven-web-project</artifactId>
   <packaging>war</packaging>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.4</version>
   <name>Maven Web Project 17 Feb</name>
   <description>Maven Web Project for Java Project</description>
 
